--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<section class="section section-catalog">
 			<div class="container">
 				<header class="section__header">
-					<h2 class="page-title">Меню</h2>
+					<h2 class="page-title" id="cat">Меню</h2>
 					<nav class="catalog-nav">
 						<ul class="catalog-nav__wrapper">
 							<li class="catalog-nav__item">
@@ -485,7 +485,7 @@
 		</section>
 
 
-		<section class="sec-contacts">
+		<section class="sec-contacts" id="cont">
 			<div class="sec-contacts__container container">
 				<h2 class="page-title">Контакты</h2>
 				<div class="contacts">
