--- a/index.html
+++ b/index.html
@@ -79,17 +79,16 @@
 						<div class="product catalog__product">
 							<img src="https://thumb.tildacdn.com/tild6230-6530-4634-b539-633038363631/-/format/webp/combo4.jpg" alt="" class="product__img">
 							<div class="product__content">
-								<h3 class="product__title">Комбо для четверых</h3>
+								<h3 class="product__title">Комбо на четверых</h3>
 								<p class="product__description">1. Любая Шаурма (из раздела "Шаурма", размер Стандартный) - 4 штуки 2. Картофель фри/по-деревенски - 2 порции 3. Морс ягодный/облепиховый 0,25 л - 4 штуки
 								</p>
 							</div>
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">999</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">999</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -98,7 +97,7 @@
 						<div class="product catalog__product">
 							<img src="https://thumb.tildacdn.com/tild3731-6438-4436-b930-346263363634/-/format/webp/DSC_0650.jpg" alt="" class="product__img">
 							<div class="product__content">
-								<h3 class="product__title">Комбо для двоих</h3>
+								<h3 class="product__title">Комбо на двоих</h3>
 								<p class="product__description">1. Любая Шаурма (из раздела "Шаурма", размер Стандартный) - 2 штуки
 									2. Картофель фри/по-деревенски - 2 порции
 									3. Соус фирменный томатный
@@ -108,10 +107,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">699</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">699</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -130,10 +128,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">279</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">279</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -148,10 +145,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">189</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">189</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -166,10 +162,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">209</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">209</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -184,10 +179,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">229</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">229</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -202,10 +196,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">239</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">239</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -220,10 +213,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">219</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">219</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -238,10 +230,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">299</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">299</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -256,10 +247,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">139</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">139</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -274,10 +264,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">179</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">179</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -292,10 +281,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">159</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">159</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -310,10 +298,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">169</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">169</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -328,10 +315,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">189</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">189</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -346,10 +332,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">169</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">169</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -364,10 +349,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">159</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">159</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -382,10 +366,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">99</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">99</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -400,10 +383,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">99</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">99</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -418,10 +400,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">119</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">119</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -436,10 +417,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">129</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">129</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -454,10 +434,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">49</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">49</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -472,10 +451,9 @@
 							<footer class="product__footer">
 								<div class="product__bottom">
 									<div class="product__price">
-										<span class="product__price-value">49</span>
-										<span class="product__currency">&#8381;</span>
+										<span class="product__price-value">49</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">заказать</button>
+									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
 								</div>
 							</footer>
 						</div>
