--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="https://sun9-46.userapi.com/impg/8lT-HgsmIVN1HfjWz9D-GBm9FaZ8iJH6ZTO62w/PkEyC_YDB5w.jpg?size=996x530&quality=96&sign=dab6d881c4fef4b3e7c22f178b45bbcf&type=album" type="image/png">
 </head> 
 <body>
-	<header class="header">
+	<header id="header" class="header">
 			<div class="container">
 				<div class="header__body">
 					<a href="" class="header__logo"><img src="https://sun9-46.userapi.com/impg/8lT-HgsmIVN1HfjWz9D-GBm9FaZ8iJH6ZTO62w/PkEyC_YDB5w.jpg?size=996x530&quality=96&sign=dab6d881c4fef4b3e7c22f178b45bbcf&type=album"></a>
@@ -88,7 +88,7 @@
 									<div class="product__price">
 										<span class="product__price-value">999</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -109,7 +109,7 @@
 									<div class="product__price">
 										<span class="product__price-value">699</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -130,7 +130,7 @@
 									<div class="product__price">
 										<span class="product__price-value">279</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -147,7 +147,7 @@
 									<div class="product__price">
 										<span class="product__price-value">189</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -164,7 +164,7 @@
 									<div class="product__price">
 										<span class="product__price-value">209</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -181,7 +181,7 @@
 									<div class="product__price">
 										<span class="product__price-value">229</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -198,7 +198,7 @@
 									<div class="product__price">
 										<span class="product__price-value">239</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -215,7 +215,7 @@
 									<div class="product__price">
 										<span class="product__price-value">219</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -232,7 +232,7 @@
 									<div class="product__price">
 										<span class="product__price-value">299</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -249,7 +249,7 @@
 									<div class="product__price">
 										<span class="product__price-value">139</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -266,7 +266,7 @@
 									<div class="product__price">
 										<span class="product__price-value">179</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -283,7 +283,7 @@
 									<div class="product__price">
 										<span class="product__price-value">159</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -300,7 +300,7 @@
 									<div class="product__price">
 										<span class="product__price-value">169</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -317,7 +317,7 @@
 									<div class="product__price">
 										<span class="product__price-value">189</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -334,7 +334,7 @@
 									<div class="product__price">
 										<span class="product__price-value">169</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -351,7 +351,7 @@
 									<div class="product__price">
 										<span class="product__price-value">159</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -368,7 +368,7 @@
 									<div class="product__price">
 										<span class="product__price-value">99</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -385,7 +385,7 @@
 									<div class="product__price">
 										<span class="product__price-value">99</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -402,7 +402,7 @@
 									<div class="product__price">
 										<span class="product__price-value">119</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -419,7 +419,7 @@
 									<div class="product__price">
 										<span class="product__price-value">129</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -436,7 +436,7 @@
 									<div class="product__price">
 										<span class="product__price-value">49</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<button class="btn product__btn" type="button" >В корзину</button>
 								</div>
 							</footer>
 						</div>
@@ -453,7 +453,7 @@
 									<div class="product__price">
 										<span class="product__price-value">49</span><span class="product__currency">&#8381;</span>
 									</div>
-									<button class="btn product__btn" type="button" data-popup="popup-order">В корзину</button>
+									<a class="btn product__btn" href="#popup" >В корзину</a>
 								</div>
 							</footer>
 						</div>
@@ -519,29 +519,28 @@
 		</footer>
 
 		
-		<div class="popup popup-order">
-			<div class="popup__wrapper">
-				<div class="popup__inner">
-					<div class="popup__content">
-						<button class="btn-close popup__btn-close"></button>
-						<h2 class="page-title popup__title">Заполните форму</h2>
-						<p class="popup__subtitle popup__subtitle--order">Доставим шаурму за 1 - 2 часа</p>
-							<form class="form">
-								<input class="form__input popup__content--centered" type="text" name="имя" placeholder="Имя" required>
-								<input class="form__input popup__content--centered" type="text" name="телефон" placeholder="Телефон" required>
-								<input class="form__input popup__content--centered" type="text" name="адрес" placeholder="Адрес" required>
-								<select class="form__input popup__content--centered" name="оплата">
-									<option value="Оплата наличными">Оплата наличными</option>
-									<option value="Оплата картой">Оплата картой</option>
-								</select>
-								<button class="btn form__btn" type="submit">Оформить заказ</button>
-							</form>
-						</div>
+		
+		<div id="popup" class="popup">
+			<a href="#header" class="popup__area"></a>
+			<div class="popup__body">
+				<div class="popup__content">
+					<a href="#header" class="popup__close">&#9587;</a>
+					<img src="https://thumb.tildacdn.com/tild3234-3932-4565-a533-656562306465/-/format/webp/photo.jpg" alt="" class="product__img popup__img">
+					<div class="popup__text">
+					<div class="popup__opis">
+					<h3 class="product__title popup__title">Морс из Облепихи 0.25 мл</h3>
+					<p class=" popup__description">Освежающий напиток с сочитанием сочной облепихи</p>
+					</div>
+					<div class="popup__btnprice">
+					<div class="product__price popup__price">
+						<span class="product__price-value popup__price-value">49</span><span class="product__currency">&#8381;</span>
+					</div>
+					<button class="btn product__btn popup__btn" type="button" >В корзину</button>
+					</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		
 	</div>
 
 	<script src="https://kit.fontawesome.com/2a2a0bc468.js" crossorigin="anonymous"></script>
