--- a/index.html
+++ b/index.html
@@ -35,10 +35,17 @@
 						<i class="fa fa-map-marker pointer" aria-hidden="true"></i>
 						<a class="point">Ижевск</a>
 					</nav>
+					
 				</div>
 			</div>
 	</header>
 	<div class="content">
+		<a href="">
+			<div class="cart">
+					<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+			</div>
+		</a>
+
 		<div class="sec-top">
 			<div class="sec-top__container container">
 				<p class="sec-top__info">шаурма из настоящего мяса</p>
@@ -1001,5 +1008,6 @@
 	<script src="https://kit.fontawesome.com/2a2a0bc468.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	<script src="Styles/script.js"></script>
+	<link rel="stylesheet" href="smartbasket/css/smartbasket.min.css">
 </body>
 </html>
